--- a/hurryUp.html
+++ b/hurryUp.html
@@ -436,8 +436,10 @@
 </section>
 </div>
 <div class="hurry-up-component overlay-card">
-  <h2>Hurry Up 🔥</h2>
-  <p><span style="color: #F11A7B;">Register</span> and Start using the crazy features on Appsala!</p>
+  <div class="hurry-up-component-top">
+    <h2>Hurry Up 🔥</h2>
+    <p><span style="color: #F11A7B;">Register</span> and Start using the crazy features on Appsala!</p>  
+  </div>
   <div class="line"></div>
     <div class="hurry-up">
         <div class="hurry-up-item">
