--- a/login.html
+++ b/login.html
@@ -436,8 +436,10 @@
 </section>
 </div>
 <div class="login-component overlay-card">
-  <img src="images/logo.png" alt="appsala">
-  <p><span style="color: #F11A7B;">Login</span> and Start using the crazy features on Appsala!</p>
+  <div class="login-component-top">
+    <img src="images/logo.png" alt="appsala">
+    <p><span style="color: #F11A7B;">Login</span> and Start using the crazy features on Appsala!</p>
+  </div>
   <div class="line"></div>
     <form action="" class="login-register-form">
         <div>
