--- a/product.html
+++ b/product.html
@@ -45,8 +45,11 @@
 
          
     <div class="product-card-left flex">
+      <div>
+        
       <img src="images/monday.png" alt="product-image">
-      <div class="card left div">
+      </div>
+      <div class="card-left-div">
         <h2 class="dark-text">monday.com</h2>
         <div class="stars flex">
           <img src="images/star.png" alt="star">
