--- a/register.html
+++ b/register.html
@@ -435,9 +435,10 @@
 
 </section>
 </div>
-<div class="login-component overlay-card">
+<div class="login-component overlay-card">  <div class="login-component-top">
   <img src="images/logo.png" alt="appsala">
-  <p><span style="color: #F11A7B;">Register</span> and Start using the crazy features on Appsala!</p>
+  <p><span style="color: #F11A7B;">Login</span> and Start using the crazy features on Appsala!</p>
+</div>
   <div class="line"></div>
     <form action="" class="login-register-form">
         <div>
