links-page-added

--- a/mobile-dashboard-sidebar2.html
+++ b/mobile-dashboard-sidebar2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" media="screen and (max-width: 479px)" href="mobile.css">
     <title>Appsala</title>
 </head>
-<body class="mobile-dashboard-sidebar">
+<body class="mobile-dashboard-sidebar sidebar-2">
     <div class="mobile-sidebar">
         <div class="user-image">
             <img src="images/logo1.png" alt="logo1">
