subscription-page-added

--- a/subscription.html
+++ b/subscription.html
@@ -440,24 +440,44 @@
   <p>Fill up the Details of the App/Service you are using.</p>
   <div class="line"></div>
   <form action="" class="subscription-form">
-    <div>
+    <div class="flex">
+      <div style="margin-right: 15px">
         <label for="">Start Date</label>
         <select name="" id="">
-            <option value="">12/3/23</option>
+          <option value="">12/3/23</option>
         </select>
-    </div>
-    <div>
+      </div>
+      <div class="flex">
         <label for="">Package</label>
         <select name="" id="">
-            <option value="">Professional</option>
+          <option value="">Professional</option>
         </select>
+      </div>
     </div>
-    <div>
-        <label for="">Price 💵</label>
-        <input type="text">
+
+    <div class="flex">
+      <div>
+        <label for="">Price $</label>
+        <input type="text" placeholder="9" />
+      </div>
+      <div style="margin-left:-25px;">
+        <label for="">Duration</label>
         <select name="" id="">
-            <option value="">Monthly</option>
+          <option value="">Monthly</option>
         </select>
+      </div>
+             
+    </div>
+    <div class="flex" >
+      <div >
+        <label for="">Total Paid $</label>
+        <input type="text" placeholder="200"/>
+      </div>
+      <div class="dashboard-card-check-box flex" style="margin-right: 15px">
+        <label for="">Notify Me</label>
+        <input type="checkbox" />
+      </div>
+      
     </div>
   </form>
   <div class="button-div" style="align-self: center;">
