--- a/dashboard-subscription.html
+++ b/dashboard-subscription.html
@@ -187,7 +187,7 @@
               </div>
             </div>
 
-            <div class="dashboard-card-check-box flex">
+            <div class="dashboard-card-check-box flex mobile-none">
                 <label for="">Notify Me</label>
                 <input type="checkbox">
             </div>
@@ -224,6 +224,10 @@
               <p>Total Paid > <u>$200.00</u></p>
 
             </div>
+            <div class="dashboard-card-check-box flex desktop-none">
+              <label for="">Notify Me</label>
+              <input type="checkbox">
+          </div>
           </div>
         </div>
     
